--- a/propertyinspector/index.html
+++ b/propertyinspector/index.html
@@ -7,6 +7,7 @@
         <meta name=apple-mobile-web-app-status-bar-style content=black>
         <title>tv.twitch.studio Property Inspector</title>
         <link rel="stylesheet" href="css/sdpi.css">
+
     </head>
     <body>
         <div class="sdpi-wrapper">
@@ -39,17 +40,11 @@
  		</div>
 
         <div class="sdpi-info-label hidden" style="top: -1000;" value=""></div>
-        <script src="js/common.js"></script>
-        <script src="js/common_pi.js"></script>
-        <script src="js/index_pi.js"></script>
-    <script>
-      var canvas = document.getElementById('CANVAS');
-      console.log('canvas', canvas)
 
-      context = canvas.getContext("2d");
-      context.beginPath();
-      context.arc(100, 75, 50, 0, 2 * Math.PI);
-      context.stroke();
-    </script>
+        <script src="js/main.js"></script>
+<!--        <script src="js/common.js"></script>-->
+<!--        <script src="js/common_pi.js"></script>-->
+<!--        <script src="js/index_pi.js"></script>-->
+
     </body>
     </html>
