Cleaned up code and added LICENSE.md.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
 </head>
 
 <body>
-<script src="action.js"></script>
-<script src="app.js"></script>
+<script src="lib/event-emitter.js"></script>
+<script src="lib/stream-deck.js"></script>
+<script src="lib/utils.js"></script>
 
-<script src="progressAction.js" defer></script>
+<script src="action.js"></script>
+<script src="progressAction.js"></script>
+<script src="app.js" defer></script>
 </body>
 
 </html>
