Added mechanism to connect to OctoPrint and retrieve an api key.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <script src="lib/event-emitter.js"></script>
 <script src="lib/stream-deck.js"></script>
 <script src="lib/utils.js"></script>
+<script src="../lib/misc.js"></script>
 
 <script src="action.js"></script>
 <script src="progressAction.js"></script>
