--- a/propertyinspector/index.html
+++ b/propertyinspector/index.html
@@ -35,6 +35,11 @@
 
             <div class="sdpi-item">
                 <div class="sdpi-item-label">Are you done?</div>
+                <button class="sdpi-item-value" id="connectOctoprint" onclick="connectOctoPrint()">Connect to OctoPrint</button>
+            </div>
+
+            <div class="sdpi-item">
+                <div class="sdpi-item-label">Are you done?</div>
                 <button class="sdpi-item-value" id="save" onclick="save()">Save</button>
             </div>
 
@@ -50,6 +55,7 @@
         <script src="../lib/event-emitter.js"></script>
         <script src="../lib/stream-deck.js"></script>
         <script src="../lib/utils.js"></script>
+        <script src="../lib/misc.js"></script>
 
         <script src="js/main.js" defer></script>
     </body>
