Added mechanism to connect to OctoPrint and retrieve an api key.

--- a/index.html
+++ b/index.html
@@ -1,20 +1,17 @@
 <!DOCTYPE HTML>
 <html>
-
 <head>
-    <title>com.johnnymast.printdeck</title>
+    <title>Print Deck Plugin</title>
     <meta charset="utf-8" />
 </head>
-
 <body>
 <script src="lib/event-emitter.js"></script>
 <script src="lib/stream-deck.js"></script>
 <script src="lib/utils.js"></script>
-<script src="../lib/misc.js"></script>
+<script src="lib/misc.js"></script>
 
 <script src="action.js"></script>
 <script src="progressAction.js"></script>
 <script src="app.js" defer></script>
 </body>
-
 </html>
