Added a new action "Open the OctoPrint instance in the webbrowser"

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>Print Deck</title>
 </head>
 <body>
-
 <script src="lib/storage.js"></script>
 <script src="lib/event-emitter.js"></script>
 <script src="lib/stream-deck.js"></script>
@@ -13,6 +12,7 @@
 <script src="lib/utils.js"></script>
 <script src="action.js"></script>
 <script src="progressAction.js"></script>
+<script src="openOctoPrintAction.js"></script>
 <script src="app.js" defer></script>
 </body>
 </html>
