--- a/inspector/index.html
+++ b/inspector/index.html
@@ -14,7 +14,7 @@
 
             <div class="sdpi-item" id="select_combo">
                 <div class="sdpi-item-label">Instance</div>
-                <select class="sdpi-item-value select inspector-value" id="apikey" onchange="connectOctoPrint()" disabled>
+                <select class="sdpi-item-value select inspector-value" id="apikey" disabled>
                     <option value="noinstanced">No instances</option>
                     <option value="addnew">Add new</option>
                 </select>
