--- a/setup/index.html
+++ b/setup/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Connect to Octoprint</title>
     <link rel="stylesheet" href="css/sdpi.css">
+    <script src="../inspector/js/forms.js"></script>
     <script src="js/setup.js"></script>
     <script src="js/api.js"></script>
 </head>
