Added a basic translation system to translate inspector fields and plugin texts. Right after i would be able to write the locale files.

--- a/inspector/index.html
+++ b/inspector/index.html
@@ -26,8 +26,9 @@
 <div id="inspector_page_content"></div>
 <script src="../lib/storage.js"></script>
 <script src="../lib/event-emitter.js"></script>
+<script src="../lib/localization.js"></script>
 <script src="../lib/stream-deck.js"></script>
-<script src="../lib/utils.js"></script>
+<script src="../lib/api.js"></script>
 <script src="../lib/misc.js"></script>
 <script src="js/forms.js"></script>
 <script src="js/connect.js"></script>
