--- a/inspector/progress.html
+++ b/inspector/progress.html
@@ -1,18 +1,18 @@
 <div class="sdpi-wrapper">
 
     <div class="sdpi-item" id="hostname">
-        <div class="sdpi-item-label">Host</div>
-        <input id="host" type="text" class="inspector-value" placeholder="Press Connect to obtain" value="" />
+        <div class="sdpi-item-label inspector-translatable" data-text="Host"></div>
+        <input id="host" type="text" class="inspector-value inspector-translatable" data-placeholder="Press Connect to obtain" value="" />
     </div>
 
     <div class="sdpi-item">
-        <div class="sdpi-item-label">API Key</div>
-        <input id="apikey" type="text" class="inspector-value" placeholder="Press Connect to obtain" value="" />
+        <div class="sdpi-item-label inspector-translatable" data-text="API Key"></div>
+        <input id="apikey" type="text" class="inspector-value inspector-translatable" data-placeholder="Press Connect to obtain" value="" />
     </div>
 
     <div class="sdpi-item">
         <div class="sdpi-item-label empty"></div>
-        <button class="sdpi-item-value" id="connect" onclick="connectOctoPrint()">Connect</button>
+        <button class="sdpi-item-value inspector-translatable" id="connect" onclick="connectOctoPrint()" data-text="Connect">Connect</button>
     </div>
 
     <!--
