--- a/plugin/index.html
+++ b/plugin/index.html
@@ -8,9 +8,10 @@
 <div id="inspector_page_content"></div>
 <script src="../lib/storage.js"></script>
 <script src="../lib/event-emitter.js"></script>
+<script src="../lib/localization.js"></script>
 <script src="../lib/stream-deck.js"></script>
 <script src="../lib/misc.js"></script>
-<script src="../lib/utils.js"></script>
+<script src="../lib/api.js"></script>
 <script src="js/action.js"></script>
 <script src="js/progressAction.js"></script>
 <script src="js/openOctoPrintAction.js"></script>
