Added a designs folder for all psd's and added set temprature actions.

--- a/inspector/index.html
+++ b/inspector/index.html
@@ -8,6 +8,7 @@
     <meta name=apple-mobile-web-app-status-bar-style content=black>
     <title>Print Deck Property Inspector</title>
     <link rel="stylesheet" href="css/sdpi.css">
+    <style id="inline_style"></style>
 
 </head>
 <body>
