--- a/plugin/index.html
+++ b/plugin/index.html
@@ -13,8 +13,10 @@
 <script src="../lib/misc.js"></script>
 <script src="../lib/api.js"></script>
 <script src="js/action.js"></script>
-<script src="js/progressAction.js"></script>
-<script src="js/openOctoPrintAction.js"></script>
+<script src="js/OctoPrintSetTemperatureAction.js"></script>
+<script src="js/OctoPrintProgressAction.js"></script>
+<script src="js/OctoPrintOpenAction.js"></script>
+<script src="js/OctoPrintRest.js"></script>
 <script src="js/app.js" defer></script>
 </body>
 </html>
