Ibjected the Stream Deck style into the setup. The connect button inside setup now responds to when you press the enter key.

--- a/plugin/index.html
+++ b/plugin/index.html
@@ -14,6 +14,7 @@
 <script src="../lib/api.js"></script>
 <script src="js/action.js"></script>
 <script src="js/OctoPrintSetTemperatureAction.js"></script>
+<script src="js/OctoPrintCooldownAction.js"></script>
 <script src="js/OctoPrintProgressAction.js"></script>
 <script src="js/OctoPrintOpenAction.js"></script>
 <script src="js/OctoPrintRest.js"></script>
